<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".MainActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:background="#00a0e8"      
        >


	<ImageView
	    android:id="@+id/logoimg"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@mipmap/btn_logo"
	    android:layout_gravity="center"
	    android:contentDescription="@string/image"
	    />    
	   
   </FrameLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="3"
	    android:weightSum="5"
	    android:orientation="vertical"
	    >
		<LinearLayout 
		    android:id="@+id/btn1"
		    style="@style/mian_linearlayout"
		    android:background="@drawable/btn1selector"
		    >
		    <TextView 
		        android:id="@+id/text11"
		        android:text="@string/nemt_1"
		        style="@style/main_text1"
		        />
		    <TextView 
		        android:id="@+id/text12"
		        android:text="@string/nemt"
		        style="@style/main_text2"
		        />
		</LinearLayout>
		<LinearLayout 
		    android:id="@+id/btn2"
		    style="@style/mian_linearlayout"
		    android:background="@drawable/btn2selector"
		    >
		    <TextView 
		        android:id="@+id/text21"
		        android:text="@string/cet4_1"
		        style="@style/main_text1"
		        />
		    <TextView 
		        android:id="@+id/text22"
		        android:text="@string/cet4"
		        style="@style/main_text2"
		        />
		</LinearLayout>
		<LinearLayout 
		    android:id="@+id/btn3"
		    style="@style/mian_linearlayout"
		    android:background="@drawable/btn3selector"
		    >
		    <TextView 
		        android:id="@+id/text31"
		        android:text="@string/cet6_1"
		        style="@style/main_text1"
		        />
		    <TextView 
		        android:id="@+id/text32"
		        android:text="@string/cet6"
		        style="@style/main_text2"
		        />
		</LinearLayout>
		<LinearLayout 
		    android:id="@+id/btn4"
		    style="@style/mian_linearlayout"
		    android:background="@drawable/btn4selector"
		    >
		    <TextView 
		        android:id="@+id/text41"
		        android:text="@string/ietsl_1"
		        style="@style/main_text1"
		        />
		    <TextView 
		        android:id="@+id/text42"
		        android:text="@string/ietsl"
		        style="@style/main_text2"
		        />
		</LinearLayout>
		<LinearLayout 
		    android:id="@+id/btn5"
		    style="@style/mian_linearlayout"
		    android:background="@drawable/btn5selector"
		    >
		    <TextView 
		        android:id="@+id/text51"
		        android:text="@string/gre_1"
		        style="@style/main_text1"
		        />
		    <TextView 
		        android:id="@+id/text52"
		        android:text="@string/gre"
		        style="@style/main_text2"
		        />
		    </LinearLayout>
	</LinearLayout>
</LinearLayout>
